[package]
name = "bevy_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.13.2", features = ["dynamic_linking"] }
rand = "0.8.5"

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
    "dynamic_linking",
    "animation",
    "bevy_asset",
    # "bevy_audio",
    # "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    # "hdr",
    # "vorbis",
    "x11",
    "bevy_gizmos",
    # "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
]
