[package]
name = "bevy_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [bevy_experiment]
# crate-type = ["cdylib"]

[dependencies]
# bevy = { version = "0.13.2", features = ["dynamic_linking"] }
rand = "0.9.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.108"
iyes_perf_ui = "0.5.0"


# [dependencies.wasm-server-runner]
# version = "0.6.1"




[dependencies.bevy]
version = "0.17.2"
default-features = false
features = [
    # "dynamic_linking",
    "bevy_animation",
    "bevy_asset",
    # "bevy_audio",
    # "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    # "multi-threaded",
    "png",
    # "hdr",
    # "vorbis",
    "x11",
    "bevy_gizmos",
    "bevy_state",
    "bevy_dev_tools",
    # "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
    # "wasm_js",
    "zstd_rust",
]
# AssetPlugin - with feature bevy_asset
# ScenePlugin - with feature bevy_scene
# WinitPlugin - with feature bevy_winit
# RenderPlugin - with feature bevy_render
# ImagePlugin - with feature bevy_render
# PipelinedRenderingPlugin - with feature bevy_render when not targeting wasm32
# CorePipelinePlugin - with feature bevy_core_pipeline
# SpritePlugin - with feature bevy_sprite
# TextPlugin - with feature bevy_text
# UiPlugin - with feature bevy_ui
# PbrPlugin - with feature bevy_pbr
# GltfPlugin - with feature bevy_gltf
# AudioPlugin - with feature bevy_audio
# GilrsPlugin - with feature bevy_gilrs
# AnimationPlugin - with feature bevy_animation
# GizmoPlugin - with feature bevy_gizmos
# StatesPlugin - with feature bevy_state
# DevToolsPlugin - with feature bevy_dev_tools
# CiTestingPlugin - with feature bevy_ci_testing
